fix: add java.time for jdk17, DAG serialize bug